# IGNYTE-SolanaAIStudio

./: .env.example  .gitignore  CONTRIBUTING.md  FRONTEND_COMPLETE.md  FRONTEND_GUIDE.md  README.md  cli_test_suite.py  comp_test.py  dev-requirements.txt  diagnose_installation.py  package-lock.json  pyproject.toml  pytest.ini  quicktest.py  requirements.txt  setup.py  setup_script.sh  setup_solana_swarm.sh  test_cli.sh  xrpl_wallets.example.json
.github/workflows/: ci.yml
agents/: decision-maker.yaml  portfolio-manager.yaml  price-monitor.yaml
asset_guardian/src/: defai_asset_guardian.py
docs/: XRPL_QUICKSTART.md  XRPL_TOKENS.md  api-reference.md  core-concepts.md
frontend/: .env.example  FEATURES.md  README.md  index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/components/: AgentCard.css  AgentCard.tsx  ChainAiHub.css  ChainAiHub.tsx  Dashboard.tsx  Header.css  Header.tsx  MarketOverview.tsx  SwarmActivity.tsx  TransactionList.tsx  WalletConnect.tsx  WalletContextProvider.tsx
frontend/src/services/: api.example.ts
frontend/src/types/: agent.ts
plugins/arbitrage-agent/: plugin.py
plugins/decision-maker/: plugin.py
plugins/defi-yield/: agent.yaml  plugin.py
plugins/price-monitor/: plugin.py
plugins/token-transfer/: plugin.py
scripts/: chat.sh  create_solana_wallet.sh  issue_xrpl_tokens.py  quickstart.sh  run_example.py  test_xrpl_tokens.py  verify_setup.sh  verify_workshop.py
solana_swarm/: __init__.py
solana_swarm/agents/decision_maker/: plugin.py
solana_swarm/agents/portfolio_manager/: plugin.py
solana_swarm/agents/price_monitor/: agent.yaml  plugin.py
solana_swarm/cli/: __main__.py  chat.py  config.py  create.py  main.py  plugins.py
solana_swarm/core/: __init__.py  agent.py  consensus.py  exceptions.py  llm_provider.py  market_data.py  memory_manager.py  solana_integration.py  swarm_agent.py
solana_swarm/core/config/: agent_roles.json  loader.py  schema.py  swarm_config.json
solana_swarm/integrations/jupiter/: __init__.py  client.py  types.py
solana_swarm/integrations/orca/: __init__.py  client.py  types.py
solana_swarm/integrations/raydium/: __init__.py  client.py  types.py
solana_swarm/integrations/xrpl/: README.md  __init__.py  client.py  token_issuer.py  types.py
solana_swarm/plugins/: __init__.py  base.py  loader.py
solana_swarm/templates/plugin_template/: README.md  agent.yaml  plugin.py
tests/core/: test_market.py  test_solana_integration.py  test_swarm_agent.py
tests/integration/: test_all_dexs.py  test_full_integration.py  test_jupiter_integration.py  test_swarm_integration.py
tests/plugins/: test_agents.py  test_swarm.py
